--- a/about.html
+++ b/about.html
@@ -52,28 +52,28 @@
 	<section role="main" class="m-hero-copy l-row">
 		<div class="l-l8 l-lshift2">
 		<p class="lead">A hot bath on a cold winter night. Walks to the creek. Getting into crisp clean sheets. The city after the rain. A cup of coffee on the dock. Finding the perfect t-shirt. Most of the time the ordinary moments, the ones we never thought to photograph, are the ones we'd give anything to relive.</p>
-		<p class="lead">We believe in the perfectly ordinary. Valuing the beauty in everyday things. That's what inspired us to create the ultimate essentials. Pairing the finest quality Egyptian cotton with a focus on sustainability and affordable pricing.</p>
+		<p class="lead">We believe in the perfectly ordinary. Valuing the beauty in everyday things. That's what inspired us to create the elevated essentials for everyday living.</p>
 		</div>
 	</section>
 	
 	<section class="m-herohalf l-row" style="background-image: url('images/demo/onethingdonewell.jpg')">
 			<div class="l-l4 l-lshift1 b-white">
 				<h3>One thing done well</h3>
-				<p>Our design and production team handles one fabric, and one fabric only, Egyptian cotton. This enables us to use the very best patterns, dyes and machines for the fabric enabling us to create the ultimate luxury basics.</p>
+				<p>Our design and production team handles one fabric, and one fabric only, Egyptian cotton. This enables us to use patterns, dyes and machines that are the best for our fabric. Our carefully considered process is dedicated to handling the finest natural fibre the world has to offer.</p>
 			</div>
 	</section>
 	
 	<section class="m-herohalf l-row" style="background-image: url('images/demo/everydayluxury.jpg')">
 			<div class="l-l4 l-lshift7 b-white">
 				<h3>Everyday Luxury</h3>
-				<p>Integrating ourselves into the entire process from farm to factory provides an unmatched level of detail and quality, with a price tag that won’t break the bank.</p>
+				<p>Integrating ourselves into the entire process from farm to factory allows us to  provide an unmatched level of detail and quality with a modest price.</p>
 			</div>
 	</section>
 	
 	<section class="m-herohalf l-row" style="background-image: url('images/demo/sustainable.jpg')">
 			<div class="l-l4 l-lshift1 b-white">
 				<h3>Sustainable by design</h3>
-				<p>To rejuvenate the egyptian cotton industry, we enforce strict sustainability practices, and provide private subsidies so the independent farmers can focus on what they love, not on where their next meal will come from.</p>
+				<p>To rejuvenate the Egyptian cotton industry, we encourage thorough sustainability practices through our farming and manufacturing, and provide private subsidies so that our independent farmers can focus on what they love, not on where their next meal will come from.</p>
 			</div>
 	</section>
 	
