--- a/index.html
+++ b/index.html
@@ -33,88 +33,83 @@
 				<li><a href="quality.html">Quality</a></li>
 				<li><a href="lookbook.html">Lookbook</a></li>
 				<li><a href="shop.html">Shop</a></li>
+				<li><a href="#"><?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<svg style="position: relative; top: 2px;" width="12px" height="12px" viewBox="0 0 20 20" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+    <title>Shopping Cart</title>
+    <defs></defs>
+    <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" sketch:type="MSPage">
+        <g id="ic_shopping_cart_24px" sketch:type="MSLayerGroup" transform="translate(-1.000000, -2.000000)">
+            <path d="M7,18 C5.9,18 5.01,18.9 5.01,20 C5.01,21.1 5.9,22 7,22 C8.1,22 9,21.1 9,20 C9,18.9 8.1,18 7,18 L7,18 Z M1,2 L1,4 L3,4 L6.6,11.59 L5.25,14.04 C5.09,14.32 5,14.65 5,15 C5,16.1 5.9,17 7,17 L19,17 L19,15 L7.42,15 C7.28,15 7.17,14.89 7.17,14.75 L7.2,14.63 L8.1,13 L15.55,13 C16.3,13 16.96,12.59 17.3,11.97 L20.88,5.48 C20.96,5.34 21,5.17 21,5 C21,4.45 20.55,4 20,4 L5.21,4 L4.27,2 L1,2 L1,2 Z M17,18 C15.9,18 15.01,18.9 15.01,20 C15.01,21.1 15.9,22 17,22 C18.1,22 19,21.1 19,20 C19,18.9 18.1,18 17,18 L17,18 Z" id="Shape" fill="rgba(0,0,0,0.87)" sketch:type="MSShapeGroup"></path>
+            <path d="M0,0 L24,0 L24,24 L0,24 L0,0 Z" id="Shape" sketch:type="MSShapeGroup"></path>
+        </g>
+    </g>
+</svg> (2)</a></li>
 			</ul>
 		</nav>
+		<!--
+<nav class="m-cartnav">
+			<p><a href="shop.html"><img width="auto" height="12px" style="position: relative; top: 1px;" src="images/cart.svg"/></a></p>
+		</nav>
+-->
 	</header>
 
 	<section id="hero" class="m-splash m-splash--launch l-row" style="background-image: url(images/demo/home.jpg)">
 		<div class="m-callout">
 			<div>
 				<p class="hero-copy--small" style="text-indent: 0;">Chapter One</p>
-				<p class="hero-copy">The perfect fabric,<br>the perfect fit,<br>the perfect t-shirt.</p>
-<!-- 				<p class="hero-copy">Elevate the ordinary.</p> -->
+				<p class="hero-copy">The perfect fit,<br>the perfect fabric,<br>the perfect t-shirt.</p>
 				<a href="shop.html" class="cta--white">Shop now</a>
 			</div>
 		</div>
-<!--
-		<div class="m-scrollcta">
-			<a href="#">Scroll down</a>
-		</div>
--->
-	</section>
-<!--
-	<section role="main" class="about">
-		<div class="m-hero-copy l-row">
-			<div class="l-l8 l-m10 l-s12">
-			<p>A hot bath on a cold winter night. Walks to the creek. Getting into crisp clean sheets. The city after the rain. A cup of coffee on the dock. Finding the perfect t-shirt. Most of the time the ordinary moments, the ones we never thought to photograph, are the ones we'd give anything to relive.</p>
-			<p>We believe in the perfectly ordinary. Valuing the beauty in everyday things. That's what inspired us to create the ultimate essentials. Pairing the finest quality Egyptian cotton with a focus on sustainability and affordable pricing.</p>
-			</div>
-		</div>
-		<div class="m-threeup l-row">
-		<div class="m-home-key-points">
-			<div class="l-l4">
-				<h3>One thing done well</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam, magni libero aliquam non consequatur accusamus porro aut ex cumque repellendus. Eum, cupiditate reiciendis temporibus explicabo doloribus eveniet quod natus officia?</p>
-			</div>
-			<div class="l-l4">
-				<h3>Sustainable luxury</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet, suscipit, recusandae, minima animi nulla cum obcaecati cumque odio ab doloremque voluptatibus excepturi maiores quaerat vitae quasi non rerum accusamus ipsam!</p>
-			</div>
-			<div class="l-l4 l-omega">
-				<h3>Always fresh</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique, repellendus, saepe quasi praesentium facere veritatis molestiae in quod modi necessitatibus at ipsam assumenda unde voluptates laudantium repudiandae eligendi blanditiis rerum.</p>
-			</div>
-		</div>
-		<div class="l-l12">
-			<a href="about.html" class="cta">Learn more about us</a>
-		</div>
-	</section>
--->
-<!--
-	<section id="collections">
-		<div class="m-collage">
+		
+		<div class="m-socialnav">
 			<ul>
-				<li class="m-collage__image l-l3">
-					<img src="//placehold.it/500x700" alt="#" />
-				</li>
-				<li class="m-collage__image l-l9 l-lshift2">
-					<img src="//placehold.it/900x500" alt="#" />
-				</li>
-				<li class="m-collage__image l-l3 l-lshift9">
-					<img src="//placehold.it/300x500" alt="#" />
-				</li>
-			</ul>			
+				<li><a target="_blank" href="//instagram.com/wearkotn">
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<svg width="20px" height="20px" viewBox="0 0 50 51" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:sketch="http://www.bohemiancoding.com/sketch/ns">
+    <title>Instagram Icon</title>
+    <defs>
+        <path id="path-1" d="M0,0.270756531 L50,0.270756531 L50,50.2707565 L0,50.2707565 L0,0.270756531 Z"></path>
+    </defs>
+    <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" sketch:type="MSPage">
+        <g id="instagram-glyph-2" sketch:type="MSLayerGroup">
+            <mask id="mask-2" sketch:name="Clip 2" fill="white">
+                <use xlink:href="#path-1"></use>
+            </mask>
+            <g id="Clip-2"></g>
+            <path d="M44.1568183,50.1850758 L5.75833877,50.1850758 C2.57849294,50.1850758 0.000132291465,47.6058332 0.000132291465,44.4237825 L0.000132291465,6.02883072 C0.000132291465,2.84854391 2.57849294,0.270624239 5.75833877,0.270624239 L44.1568183,0.270624239 C47.3371051,0.270624239 49.9150248,2.84854391 49.9150248,6.02883072 L49.9150248,44.4237825 C49.9150248,47.6058332 47.3371051,50.1850758 44.1568183,50.1850758 L44.1568183,50.1850758 Z M24.9573581,15.6283404 C19.6555571,15.6283404 15.3582894,19.9251671 15.3582894,25.2269681 C15.3582894,30.527887 19.6555571,34.8269187 24.9573581,34.8269187 C30.259159,34.8269187 34.5573087,30.527887 34.5573087,25.2269681 C34.5573087,19.9251671 30.259159,15.6283404 24.9573581,15.6283404 L24.9573581,15.6283404 Z M44.1568183,7.94837987 C44.1568183,6.88872524 43.2969238,6.02883072 42.2350643,6.02883072 L36.4768578,6.02883072 C35.4163212,6.02883072 34.5573087,6.88872524 34.5573087,7.94837987 L34.5573087,13.7087912 C34.5573087,14.7684458 35.4163212,15.6283404 36.4768578,15.6283404 L42.2350643,15.6283404 C43.2969238,15.6283404 44.1568183,14.7684458 44.1568183,13.7087912 L44.1568183,7.94837987 Z M44.1568183,21.3861059 L39.8114847,21.3861059 C40.1281022,22.6150936 40.3150742,23.8992027 40.3150742,25.2269681 C40.3150742,33.7103787 33.4394458,40.5855661 24.9573581,40.5855661 C16.4757113,40.5855661 9.59964193,33.7103787 9.59964193,25.2269681 C9.59964193,23.8992027 9.78749581,22.6150936 10.1041134,21.3861059 L5.75833877,21.3861059 L5.75833877,42.5055562 C5.75833877,43.5643289 6.61823329,44.4237825 7.68009278,44.4237825 L42.2350643,44.4237825 C43.2969238,44.4237825 44.1568183,43.5643289 44.1568183,42.5055562 L44.1568183,21.3861059 Z" id="Fill-1" fill="#ffffff" sketch:type="MSShapeGroup" mask="url(#mask-2)"></path>
+        </g>
+    </g>
+</svg></a></li>
+				<li><a target="_blank" href="//facebook.com/wearkotn"><?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<svg width="20px" height="20px" viewBox="0 0 50 51" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:sketch="http://www.bohemiancoding.com/sketch/ns">
+    <title>Facebook Icon</title>
+    <defs></defs>
+    <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" sketch:type="MSPage">
+        <path d="M2.75972019,0 C1.23513918,0 0,1.25983724 0,2.81471296 L0,48.185287 C0,49.7397806 1.23513918,51 2.75972019,51 L26.7065828,51 L26.7065828,31.250193 L20.1906757,31.250193 L20.1906757,23.5532046 L26.7065828,23.5532046 L26.7065828,17.8769624 C26.7065828,11.2896169 30.6508601,7.70272093 36.4121577,7.70272093 C39.1716905,7.70272093 41.5434275,7.91234348 42.2349031,8.00597616 L42.2349031,14.89008 L38.2389197,14.8919908 C35.1058289,14.8919908 34.4992188,16.41056 34.4992188,18.6390177 L34.4992188,23.5532046 L41.9715017,23.5532046 L40.9984526,31.250193 L34.4992188,31.250193 L34.4992188,51 L47.2404672,51 C48.7644861,51 50,49.7397806 50,48.185287 L50,2.81471296 C50,1.25983724 48.7644861,0 47.2404672,0 L2.75972019,0 Z" id="Fill-15" fill="#ffffff" sketch:type="MSShapeGroup"></path>
+    </g>
+</svg></a></li>
+				<li><a target="_blank" href="//twitter.com/weaerkotn"><?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<svg width="20px" height="20px" viewBox="0 0 50 41" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:sketch="http://www.bohemiancoding.com/sketch/ns">
+    <title>Twitter Logo</title>
+    <defs>
+        <path id="path-1" d="M0.0109489051,0.151130045 L49.8886861,0.151130045 L49.8886861,40.9889686 L0.0109489051,40.9889686"></path>
+    </defs>
+    <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" sketch:type="MSPage">
+        <g id="Twitter_logo_white" sketch:type="MSLayerGroup">
+            <mask id="mask-2" sketch:name="Clip 2" fill="white">
+                <use xlink:href="#path-1"></use>
+            </mask>
+            <g id="Clip-2"></g>
+            <path d="M15.689781,41 C9.90967153,41 4.52956204,39.2928924 0,36.367 C0.800729927,36.4622377 1.61551095,36.5109596 2.44160584,36.5109596 C7.23686131,36.5109596 11.6501825,34.8623184 15.1531022,32.096565 C10.6742701,32.013278 6.89434307,29.031861 5.5919708,24.9348027 C6.21678832,25.0552287 6.8580292,25.1197623 7.51751825,25.1197623 C8.45109489,25.1197623 9.35529197,24.9938206 10.2142336,24.7581166 C5.53175182,23.8108879 2.00383212,19.642861 2.00383212,14.6463767 C2.00383212,14.6029865 2.00383212,14.5597803 2.00456204,14.5167578 C3.38467153,15.289139 4.96277372,15.753009 6.64069343,15.8065112 C3.89434307,13.9572825 2.08722628,10.8008341 2.08722628,7.2231704 C2.08722628,5.33330942 2.5919708,3.56185202 3.4729927,2.03878475 C8.52116788,8.2777713 16.0629562,12.383287 24.5695255,12.8133274 C24.395073,12.0585964 24.3043796,11.2715067 24.3043796,10.4632735 C24.3043796,4.76831839 28.8872263,0.151130045 34.5399635,0.151130045 C37.4837591,0.151130045 40.1437956,1.40356054 42.0109489,3.40778027 C44.3423358,2.94519731 46.5328467,2.08695516 48.5104015,0.905309417 C47.7461679,3.31327803 46.1233577,5.3342287 44.0100365,6.61056054 C46.0804745,6.36125112 48.0531022,5.80692377 49.8886861,4.98673991 C48.5164234,7.05475785 46.7810219,8.87107623 44.7813869,10.3250135 C44.8010949,10.7671883 44.8109489,11.2119372 44.8109489,11.6590762 C44.8109489,25.2863363 34.5160584,41 15.689781,41" id="Fill-1" fill="#ffffff" sketch:type="MSShapeGroup" mask="url(#mask-2)"></path>
+        </g>
+    </g>
+</svg></a></li>
+			</ul>
 		</div>
-		<div class="m-collection l-row" style="min-height: 600px;">
-			<h2>The T-Shirt</h2>
-			<h4>Free shipping &amp; returns &mdash; 15% off subscriptions</h4>
-			<a href="#" class="cta">Shop now</a>
-		</div>
+
 	</section>
--->
 	<footer class="m-footer m-footer--signup l-row">
-<!--
-		<div class="m-footer__form l-l5">
-			<p class="bold">Sign up to shop early on our next collection:</p>
-			<form id="newsletter-signup" action="signup.php?action=signup" method="post">
-		        <fieldset>
-					<div class="floatlabel-wrapper"><label for="signup-email" class="label-floatlabel">Your email</label><input type="text" name="signup-email" id="signup-email" placeholder="Your email" class="floatlabel"></div>
-					<button type="submit" id="signup-button">Request Invite</button>
-					<p id="signup-response"></p>
-		        </fieldset>
-	        </form>
-		</div>
--->
 		<nav class="m-footer__nav">
 			<ul class="m-footer__nav__legal">
 				<li>&copy; 2015 KOTN / All rights reserved</li>
