--- a/quality.html
+++ b/quality.html
@@ -44,36 +44,37 @@
 	<section class="m-herohalf m-herohalf--top l-row" style="background-image: url('images/demo/whitegold.jpg')">
 		<div class="l-l12 b-white">
 			<div class="slogan">
-				<h1>White Gold</h1>
+				<h1>They once called it &lsquo;white gold&rsquo;</h1>
 			</div>
 		</div>
 	</section>
-	
+	<!--
 	<section role="main" class="m-hero-copy l-row">
 		<div class="l-l8 l-lshift2 b-centered">
 		<p class="lead">"Egypt is the gift of the nile"</p>
 		<p class="lead b-italics">-Herodotus</p>
 		</div>
 	</section>
+	-->
 	
 	<section class="m-herohalf l-row" style="background-image: url('images/demo/location.jpg')">
 			<div class="l-l4 l-lshift1 b-white">
 				<h3>The Nile Delta</h3>
-				<p>Egyptian cotton only grows in a small area called the Nile Delta. The Nile Delta's proximity to the mediterranean coupled with its fertile lands make the weather and soil ideal for the cultivation of the world's finest cotton.</p>
+				<p>Egyptian cotton only grows in a small area called the Nile Delta. The Nile Delta's proximity to the Mediterranean, coupled with its fertile lands make the weather and soil ideal for the cultivation of the world's finest cotton.</p>
 			</div>
 	</section>
 	
 	<section class="m-herohalf l-row" style="background-image: url('images/demo/integrity.jpg')">
 			<div class="l-l4 l-lshift7 b-white">
-				<h3>Integrity</h3>
-				<p>Planted in the cool month of March to protect the young plants from the hot Egyptian Sun, and harvested by hand over 5 stages to ensure ideal maturity in September. The harvest ensures no defoliants or other chemicals usually used in mechanical harvesting ever touch the cotton, for the extra long fibres of Egyptian cotton to remain intact and undamaged, ready to be spun into the finest yarns and fabrics.</p>
+				<h3>The Product Journey</h3>
+				<p>Our cotton is planted in the cool month of March to protect the young crop from the hot Egyptian Sun, and harvested by hand over 5 stages to ensure ideal maturity in September. This process ensures no defoliants or other chemicals usually used in mechanical harvesting ever touch the cotton. We make sure that the extra long fibres of our Egyptian cotton remain intact and undamaged, in order to be spun into the finest yarns and fabrics.</p>
 			</div>
 	</section>
 	
 	<section class="m-herohalf l-row" style="background-image: url('images/demo/fibre.jpg')">
 			<div class="l-l4 l-lshift1 b-white">
 				<h3>The Fibre</h3>
-				<p>Egyptian cotton has the world's longest, most absorbent and strongest fibres creating the softest and most durable fabric.</p>
+				<p>Egyptian cotton has the world's longest, strongest, most absorbent fibres. These fibres are what create the softest and most durable fabric.</p>
 			</div>
 	</section>
 
