--- a/shop.html
+++ b/shop.html
@@ -47,16 +47,6 @@
 -->
 		</div>
 	</section>
-	
-	<!--
-<section role="main" class="m-hero-copy l-row">
-		<div class="l-l8 l-lshift2">
-		<p class="lead">A hot bath on a cold winter night. Walks to the creek. Getting into crisp clean sheets. The city after the rain. A cup of coffee on the dock. Finding the perfect t-shirt. Most of the time the ordinary moments, the ones we never thought to photograph, are the ones we'd give anything to relive.</p>
-		<p class="lead">We believe in the perfectly ordinary. Valuing the beauty in everyday things. That's what inspired us to create the ultimate essentials. Pairing the finest quality Egyptian cotton with a focus on sustainability and affordable pricing.</p>
-		</div>
-	</section>
--->
-
 
 	<section role="main">
 		<div class="l-row m-shop">
@@ -64,21 +54,36 @@
 				<img src="images/demo/crewneck.jpg" alt="product 1" />
 				<div class="copy">
 					<h4>The Crew</h4>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
 				</div>
 			</div>
 			<div class="m-product l-l4">
 				<img src="images/demo/crewneck.jpg" alt="product 2" />
 				<div class="copy">
 					<h4>The V</h4>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
 				</div>
 			</div>
 			<div class="m-product l-l4 l-omega">
 				<img src="images/demo/crewneck.jpg" alt="product 3" />
 				<div class="copy">
 					<h4>The Scoop</h4>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+				</div>
+			</div>
+			<div class="m-product l-l4">
+				<img src="images/demo/crewneck.jpg" alt="product 1" />
+				<div class="copy">
+					<h4>The Crew</h4>
+				</div>
+			</div>
+			<div class="m-product l-l4">
+				<img src="images/demo/crewneck.jpg" alt="product 2" />
+				<div class="copy">
+					<h4>The V</h4>
+				</div>
+			</div>
+			<div class="m-product l-l4 l-omega">
+				<img src="images/demo/crewneck.jpg" alt="product 3" />
+				<div class="copy">
+					<h4>The Scoop</h4>
 				</div>
 			</div>
 		</div>
