--- a/lookbook.html
+++ b/lookbook.html
@@ -94,7 +94,7 @@
 		  accessibility: true,
 		  cellAlign: 'center',
 		  draggable: true,
-		  freeScroll: true,
+		  freeScroll: true, // wtf?
 		  friction: 0.2,
 		  imagesLoaded: true,
 		  initialIndex: 0,
